[gd_scene load_steps=12 format=3 uid="uid://bps7rg4krhfcj"]

[ext_resource type="Script" path="res://scenes/Misc/Base_Health.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://2n1farnygw0i" path="res://Sprites/GreenQuarantin.png" id="2"]
[ext_resource type="AudioStream" uid="uid://bufst15oau5fq" path="res://sounds/Noise 3.ogg" id="3_5k45a"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(62, 62)

[sub_resource type="Gradient" id="Gradient_0bj54"]
colors = PackedColorArray(0.819608, 0.0705882, 0.0745098, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_twbcq"]
gradient = SubResource("Gradient_0bj54")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xhktg"]
lifetime_randomness = 0.13
emission_shape = 3
emission_box_extents = Vector3(30, 30, 1)
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 63.16
initial_velocity_max = 200.15
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 5.0
color_ramp = SubResource("GradientTexture1D_twbcq")
hue_variation_max = 0.72

[sub_resource type="GradientTexture1D" id="GradientTexture1D_frwyl"]
gradient = SubResource("Gradient_0bj54")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gls2m"]
lifetime_randomness = 0.13
emission_shape = 3
emission_box_extents = Vector3(30, 30, 1)
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 63.16
initial_velocity_max = 200.15
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 5.0
color = Color(0.964706, 0.47451, 0.372549, 1)
color_ramp = SubResource("GradientTexture1D_frwyl")
hue_variation_max = 0.72

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aktk1"]
size = Vector2(64, 63)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1eoan"]
streams_count = 1
random_pitch = 2.0
stream_0/stream = ExtResource("3_5k45a")
stream_0/weight = 1.0

[node name="Base" type="StaticBody2D" groups=["base", "target"]]
collision_layer = 3
collision_mask = 11
script = ExtResource("1")

[node name="GreenQuarantin" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2")

[node name="BaseCollision" type="CollisionShape2D" parent="."]
light_mask = 3
shape = SubResource("1")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[node name="DeathParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_xhktg")
lifetime = 2.0
one_shot = true
explosiveness = 0.63

[node name="damageParticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_gls2m")
lifetime = 0.5
one_shot = true
explosiveness = 0.09
randomness = 0.16

[node name="AreaForQuarantined" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape" type="CollisionShape2D" parent="AreaForQuarantined"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_aktk1")

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_1eoan")
volume_db = -8.0

[connection signal="body_entered" from="AreaForQuarantined" to="." method="_on_area_for_quarantined_body_entered"]
[connection signal="body_exited" from="AreaForQuarantined" to="." method="_on_area_for_quarantined_body_exited"]
